--- a/7/index.html
+++ b/7/index.html
@@ -235,7 +235,7 @@
           <h2 class="visually-hidden">Ссылки на социальные сети</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="button-social" href="https://vk.com/htmlacademy">
+              <a class="footer-social-link" href="https://vk.com/htmlacademy">
                 <img
                   class="vk"
                   src="../images/vk=default.svg"
@@ -246,7 +246,7 @@
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button-social" href="https://t.me/htmlacademy">
+              <a class="footer-social-link" href="https://t.me/htmlacademy">
                 <img
                   class="tg"
                   src="../images/telegram=default.svg"
@@ -258,7 +258,7 @@
             </li>
             <li class="footer-social-item">
               <a
-                class="button-social"
+                class="footer-social-link"
                 href="https://www.youtube.com/user/htmlacademyru"
               >
                 <img
