--- a/7/index.html
+++ b/7/index.html
@@ -9,7 +9,7 @@
 </head>
   <body>
     <header class="page-header">
-      <nav class="navigation">
+      <div class="logotype">
         <a class="logo" href="index.html">
           <img
             src="../images/logo.svg"
@@ -18,8 +18,9 @@
             alt="Логотип города Седона"
           />
         </a>
-        <div class="logotype"></div>
+      </div>
 
+      <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
