--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="logotype">
         <a class="logo" href="index.html">
           <img
-            src="../images/logo.svg"
+            src="/images/logo.svg"
             width="139"
             height="70"
             alt="Логотип города Седона"
