Правит шапку и иконки

--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="logotype">
+      <nav class="navigation">
+        <!-- <div class="logotype"> -->
         <a class="logo" href="index.html">
           <img
-            src="/images/logo.svg"
+            src="images/logo.svg"
             width="139"
             height="70"
             alt="Логотип города Седона"
           />
         </a>
-      </div>
-
-      <nav class="navigation">
+        <!-- </div> -->
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -57,7 +56,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="button" href="#question">ХОЧУ СЮДА!</a>
+            <a class="button navigation-button" href="#question">ХОЧУ СЮДА!</a>
           </li>
         </ul>
       </nav>
@@ -110,7 +109,7 @@
             <li class="services-item item-life">
               <img
                 class="housing"
-                src="../images/variant=housing.svg"
+                src="images/variant=housing.svg"
                 width="84"
                 height="84"
               />
@@ -122,7 +121,7 @@
             <li class="services-item item-food">
               <img
                 class="eating"
-                src="../images/variant=eating.svg"
+                src="images/variant=eating.svg"
                 width="84"
                 height="84"
               />
@@ -136,7 +135,7 @@
             <li class="services-item item-souvenirs">
               <img
                 class="souvenir"
-                src="../images/variant=souvenir.svg"
+                src="images/variant=souvenir.svg"
                 width="84"
                 height="84"
               />
@@ -238,7 +237,7 @@
               <a class="footer-social-link" href="https://vk.com/htmlacademy">
                 <img
                   class="vk"
-                  src="../images/vk=default.svg"
+                  src="images/vk=default.svg"
                   width="24"
                   height="14"
                   alt="Социальная сеть Вконтакте"
@@ -249,7 +248,7 @@
               <a class="footer-social-link" href="https://t.me/htmlacademy">
                 <img
                   class="tg"
-                  src="../images/telegram=default.svg"
+                  src="images/telegram=default.svg"
                   width="18"
                   height="15"
                   alt="Мессенджер Телеграм"
@@ -263,7 +262,7 @@
               >
                 <img
                   class="youtube"
-                  src="../images/youtube=default.svg"
+                  src="images/youtube=default.svg"
                   width="22"
                   height="17"
                   alt="Видеохостинг Ютуб"
